# patient_encounter_system

./: .bandit  README.md  pyproject.toml
.github/workflows/: ci.yml
src/: database.py  main.py
src/models/: models.py
src/services/: clinic_service.py
tests/: test_main.py
